# hame-ryhti

./: .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  .tbls.yml  Makefile  README.md  alembic.ini  dev-requirements.in  dev-requirements.txt  docker-compose.dev.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
database/: .gitignore  alembic.ini  base.py  codes.py  db_helper.py  db_manager.Dockerfile  enums.py  koodistot_loader.Dockerfile  mml_loader.Dockerfile  models.py  ryhti_client.Dockerfile  triggers.py  validation.py  views.py
dbdoc/: README.md  arho.document.md  arho.land_use_area.md  arho.land_use_point.md  arho.lifecycle_date.md  arho.line.md  arho.organisation.md  arho.other_area.md  arho.other_point.md  arho.plan.md  arho.plan_proposition.md  arho.plan_regulation.md  arho.plan_regulation_group.md  arho.source_data.md  codes.administrative_region.md  codes.category_of_publicity.md  codes.lifecycle_status.md  codes.name_of_plan_case_decision.md  codes.plan_theme.md  codes.plan_type.md  codes.type_of_additional_information.md  codes.type_of_decision_maker.md  codes.type_of_document.md  codes.type_of_interaction_event.md  codes.type_of_plan_regulation.md  codes.type_of_plan_regulation_group.md  codes.type_of_processing_event.md  codes.type_of_source_data.md  codes.type_of_underground.md  codes.type_of_verbal_plan_regulation.md  hame.document.md  hame.land_use_area.md  hame.land_use_point.md  hame.lifecycle_date.md  hame.line.md  hame.organisation.md  hame.other_area.md  hame.other_point.md  hame.plan.md  (+6 more)
(+175 files in other folders)
